--- a/styles.scss
+++ b/styles.scss
@@ -49,12 +49,15 @@ body{
     &-img{
         border: 5px solid white;
         border-radius: 50%;
-        margin-top: calc(-48px - 5px);
+        margin-top: calc(-100px - 5px);
         background-color: white;
+        width: 200px;
+        height: 200px;
         }
     &-title{
         font-size: 1.8rem;
         margin-top: 2rem;
+        text-transform: capitalize;
 
     span{
         color: var(--dark-gray);
@@ -67,6 +70,11 @@ body{
         font-size: 1.6rem;
         margin-top: 0;
         margin-bottom: 2rem;
+        text-transform: capitalize;
+    &_{
+        font-size: 1.3rem;
+    
+    }
     }
   }  
   &-footer{
@@ -81,7 +89,7 @@ body{
   }
   p{
       letter-spacing: 1px;
-      font-size: 1.2rem;
+      font-size: 1.3rem;
   }
   }
   }
