--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
   --dark-cyan: hsl(185, 75%, 39%);
   --very-dark: hsl(229, 23%, 23%);
   --dark-gray: hsl(227, 10%, 46%);
+  --blanco: #ffffff;
 }
 
 html {
@@ -45,6 +46,8 @@ body {
   overflow: hidden;
   -webkit-box-shadow: 0 5px 5px rgba(6, 1, 12, 0.233);
           box-shadow: 0 5px 5px rgba(6, 1, 12, 0.233);
+  margin-bottom: 0;
+  padding-bottom: 0;
 }
 
 .card-header {
@@ -71,8 +74,8 @@ body {
   border-radius: 50%;
   margin-top: calc(-100px - 5px);
   background-color: white;
-  width: 200px;
-  height: 200px;
+  width: 250px;
+  height: 250px;
 }
 
 .card-body-title {
@@ -121,5 +124,48 @@ body {
 .card-footer-social p {
   letter-spacing: 1px;
   font-size: 1.3rem;
+}
+
+.contenedor {
+  text-align: center;
+}
+
+.contenedor-pokebola {
+  text-align: center;
+  width: 200px;
+  cursor: pointer;
+}
+
+.button {
+  padding: 2rem;
+  margin-bottom: 2rem;
+  background-color: var(--dark-cyan);
+  text-transform: uppercase;
+  color: var(--blanco);
+  border: none;
+}
+
+.button img {
+  width: 50px;
+  height: 50px;
+  background-color: var(--dark-cyan);
+  cursor: pointer;
+}
+
+.form-search {
+  margin-top: 2rem;
+}
+
+.form-search i {
+  margin-right: 1rem;
+}
+
+.form-search input {
+  padding: 1rem;
+  outline: none;
+  background-color: #dad6d6;
+  border-radius: 1rem;
+  border: gray;
+  color: var(--very-dark);
 }
 /*# sourceMappingURL=styles.css.map */
